# Workspace

./: .gitignore
LearningC/: .gitignore
LearningC/exercises/: .gitignore  exercise  exercise1.c  exercise10.c  exercise11.c  exercise12.c  exercise13.c  exercise14.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c  exercise7.c  exercise8.c  exercise9.c
LearningPython/exercises/: exercise1.py  exercise2.py
LearningPython/hangman_py_cli/: .gitignore  category.py  message.py  pyproject.toml  requirements.txt
LearningPython/hangman_py_cli/categories/: aleatoria.txt  frutas.txt
hangman_py_cli/: contants.py  hangman.py  main.py  message.py  pyproject.toml  style.py  utils.py
hangman_py_cli/categories/: animais.txt
hangman_py_cli/static/: animal.txt  word_fruits.txt  word_random.txt
