[tool.poetry]
name = "hangman-cli"
version = "0.1.0"
description = "Um jogo clássico de adivinhação de palavras, onde o jogador tem que acertar uma palavra secreta antes de esgotar as tentativas. O jogo é jogado em uma interface de linha de comando (CLI)"
authors = ["Andrei Vidal <andrei.godoi92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
